# outputStreams

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml
include/: CMakeLists.txt  canvas.hpp  csmanip.hpp  helper_tools.hpp  multi_progress_bar.hpp  outputStream.hpp  plot_2D.hpp  progress_bar.hpp  termDefs.hpp
include/graphics/: plot_2D.hpp
include/manipulators/: csmanip.hpp
include/progressbar/: multi_progress_bar.hpp  progress_bar.hpp
include/utils/: helper_tools.hpp
src/: CMakeLists.txt  canvas.cpp  csmanip.cpp  helper_tools.cpp  main.cpp  plot_2D.cpp  progress_bar.cpp
src/graphics/: canvas.cpp  plot_2D.cpp
src/manipulators/: csmanip.cpp  manipDefs.hpp
src/progressbar/: progress_bar.cpp
src/utils/: helper_tools.cpp
